# pickleball_scheduler

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pages.yml
src/: construct.rs  greedy.rs  lib.rs  main.rs  model.rs  report.rs  search.rs  tables.rs  target.rs  verify.rs  wasm.rs
tools/: README.md  generate.py  make_tables.py
tools/tables/: n10.json  n14.json  n18.json
web/: index.html  main.js  style.css
